# tracepoint-demo

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.agents/skills/tracepoint-demo-ebpf-implementation/: SKILL.md
.agents/skills/tracepoint-demo-layered-architecture/: SKILL.md
.github/: build-setup.yml
.github/skills/tracepoint-demo-ebpf-implementation/: SKILL.md
.github/skills/tracepoint-demo-layered-architecture/: SKILL.md
.github/workflows/: ci.yml  release.yml
doc/: design.md  operations.md  tracepoint-demo-design.md  tracepoint-demo-ebpf-design.md
tracepoint-demo/: Cargo.toml  build.rs
tracepoint-demo-common/: Cargo.toml
tracepoint-demo-common/src/: lib.rs
tracepoint-demo-ebpf/: Cargo.toml
tracepoint-demo-ebpf/src/: exec_trace.rs  kernel_read.rs  lib.rs  main.rs  maps.rs  task_iter.rs  vmlinux.rs  watch.rs
tracepoint-demo/src/: integration.rs  lib.rs  main.rs  test_support.rs
tracepoint-demo/src/gateway/: docker.rs  ebpf.rs  mod.rs  procfs.rs  systemd.rs
tracepoint-demo/src/infra/: bootstrap.rs  docker.rs  mod.rs  runtime_loop.rs  runtime_monitors.rs  startup.rs  systemd.rs
tracepoint-demo/src/infra/presentation/: cli.rs  mod.rs  output.rs  runtime_update_dispatch.rs  runtime_updates.rs  wait.rs
tracepoint-demo/src/interface/: app_builder.rs  cli.rs  docker.rs  mod.rs  output.rs  runtime_loop.rs  runtime_update_dispatch.rs  runtime_updates.rs  systemd.rs  wait.rs
tracepoint-demo/src/usecase/: app.rs  mod.rs  ports.rs  runtime_session.rs  startup.rs  state.rs  trace_selected_targets.rs  watch_container.rs  watch_pid_or_tty.rs  watch_roots.rs  watch_systemd_unit.rs
tracepoint-demo/src/usecase/orchestration/: mod.rs  startup_prepare.rs  startup_runtime.rs  state.rs  watch_roots.rs
tracepoint-demo/src/usecase/policy/: mod.rs  trace_selected_targets.rs  watch_container.rs  watch_pid_or_tty.rs  watch_systemd_unit.rs
tracepoint-demo/src/usecase/port/: cgroup.rs  definitions.rs  mod.rs  process_seed.rs  runtime_update.rs
tracepoint-demo/src/usecase/support/: container_monitor.rs  mod.rs  startup.rs  startup_prepare.rs  systemd_monitor.rs  tty.rs  watch_roots.rs
tracepoint-demo/tests/: cli_contract.rs  ebpf_verifier_smoke.rs  scenarios.rs
tracepoint-demo/tests/support/: mod.rs
