[workspace]
resolver = "2"
members = [
    "tracepoint-demo",
    "tracepoint-demo-common",
    "tracepoint-demo-ebpf",
]
default-members = ["tracepoint-demo", "tracepoint-demo-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "7982c14546c07bbc615671439819eef6df3eca8e", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", rev = "7982c14546c07bbc615671439819eef6df3eca8e", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "7982c14546c07bbc615671439819eef6df3eca8e", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "7982c14546c07bbc615671439819eef6df3eca8e", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "7982c14546c07bbc615671439819eef6df3eca8e", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.6", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
tokio = { version = "1.51", default-features = false }
which = { version = "8.0", default-features = false }

[profile.release.package.tracepoint-demo-ebpf]
debug = 2
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
