[package]
name = "tracepoint-demo-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
tracepoint-demo-common = { path = "../tracepoint-demo-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tracepoint-demo"
path = "src/main.rs"
